// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons logo defaults to / 1`] = `
<withRouter(Logo)>
  <Route>
    <Logo
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={Object {}}
      match={Object {}}
    >
      <Link
        onClick={[Function]}
      >
        <A
          className="link"
          onClick={[Function]}
        >
          <a
            className="link"
            onClick={[Function]}
          >
            <Imported
              className="logo"
              title="Astronomer"
            >
              <ReactImportedComponent
                className="logo"
                loadable={
                  Object {
                    "done": true,
                    "importFunction": [Function],
                    "load": [Function],
                    "mark": Array [],
                    "ok": true,
                    "payload": Object {
                      "default": Object {
                        "process": [Function],
                      },
                      "process": [Function],
                    },
                    "promise": Promise {},
                    "reset": [Function],
                  }
                }
                render={[Function]}
                title="Astronomer"
              >
                <UnconnectedReactImportedComponent
                  async={false}
                  className="logo"
                  exportPicker={[Function]}
                  loadable={
                    Object {
                      "done": true,
                      "importFunction": [Function],
                      "load": [Function],
                      "mark": Array [],
                      "ok": true,
                      "payload": Object {
                        "default": Object {
                          "process": [Function],
                        },
                        "process": [Function],
                      },
                      "promise": Promise {},
                      "reset": [Function],
                    }
                  }
                  render={[Function]}
                  streamId={0}
                  title="Astronomer"
                >
                  <img
                    className="logo"
                    src={
                      Object {
                        "process": [Function],
                      }
                    }
                    title="Astronomer"
                  />
                </UnconnectedReactImportedComponent>
              </ReactImportedComponent>
            </Imported>
          </a>
        </A>
      </Link>
    </Logo>
  </Route>
</withRouter(Logo)>
`;

exports[`Icons logo renders darkBg 1`] = `
<withRouter(Logo)
  className="textClassName"
  darkBg={true}
  to="/"
>
  <Route>
    <Logo
      className="textClassName"
      darkBg={true}
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={Object {}}
      match={Object {}}
      to="/"
    >
      <Link
        onClick={[Function]}
      >
        <A
          className="link"
          onClick={[Function]}
        >
          <a
            className="link"
            onClick={[Function]}
          >
            <Imported
              className="logo textClassName"
              title="Astronomer"
            >
              <ReactImportedComponent
                className="logo textClassName"
                loadable={
                  Object {
                    "done": true,
                    "importFunction": [Function],
                    "load": [Function],
                    "mark": Array [],
                    "ok": true,
                    "payload": Object {
                      "default": Object {
                        "process": [Function],
                      },
                      "process": [Function],
                    },
                    "promise": Promise {},
                    "reset": [Function],
                  }
                }
                render={[Function]}
                title="Astronomer"
              >
                <UnconnectedReactImportedComponent
                  async={false}
                  className="logo textClassName"
                  exportPicker={[Function]}
                  loadable={
                    Object {
                      "done": true,
                      "importFunction": [Function],
                      "load": [Function],
                      "mark": Array [],
                      "ok": true,
                      "payload": Object {
                        "default": Object {
                          "process": [Function],
                        },
                        "process": [Function],
                      },
                      "promise": Promise {},
                      "reset": [Function],
                    }
                  }
                  render={[Function]}
                  streamId={0}
                  title="Astronomer"
                >
                  <img
                    className="logo textClassName"
                    src={
                      Object {
                        "process": [Function],
                      }
                    }
                    title="Astronomer"
                  />
                </UnconnectedReactImportedComponent>
              </ReactImportedComponent>
            </Imported>
          </a>
        </A>
      </Link>
    </Logo>
  </Route>
</withRouter(Logo)>
`;

exports[`Icons logo renders full 1`] = `
<withRouter(Logo)
  className="textClassName"
  full={true}
  to="/"
>
  <Route>
    <Logo
      className="textClassName"
      full={true}
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={Object {}}
      match={Object {}}
      to="/"
    />
  </Route>
</withRouter(Logo)>
`;

exports[`Icons logo renders stars 1`] = `
<withRouter(Logo)
  className="textClassName"
  stars={true}
  to="/"
>
  <Route>
    <Logo
      className="textClassName"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={Object {}}
      match={Object {}}
      stars={true}
      to="/"
    >
      <Link
        onClick={[Function]}
      >
        <A
          className="link"
          onClick={[Function]}
        >
          <a
            className="link"
            onClick={[Function]}
          >
            <Imported
              className="logo textClassName"
              title="Astronomer"
            >
              <ReactImportedComponent
                className="logo textClassName"
                loadable={
                  Object {
                    "done": true,
                    "importFunction": [Function],
                    "load": [Function],
                    "mark": Array [],
                    "ok": true,
                    "payload": Object {
                      "default": Object {
                        "process": [Function],
                      },
                      "process": [Function],
                    },
                    "promise": Promise {},
                    "reset": [Function],
                  }
                }
                render={[Function]}
                title="Astronomer"
              >
                <UnconnectedReactImportedComponent
                  async={false}
                  className="logo textClassName"
                  exportPicker={[Function]}
                  loadable={
                    Object {
                      "done": true,
                      "importFunction": [Function],
                      "load": [Function],
                      "mark": Array [],
                      "ok": true,
                      "payload": Object {
                        "default": Object {
                          "process": [Function],
                        },
                        "process": [Function],
                      },
                      "promise": Promise {},
                      "reset": [Function],
                    }
                  }
                  render={[Function]}
                  streamId={0}
                  title="Astronomer"
                >
                  <img
                    className="logo textClassName"
                    src={
                      Object {
                        "process": [Function],
                      }
                    }
                    title="Astronomer"
                  />
                </UnconnectedReactImportedComponent>
              </ReactImportedComponent>
            </Imported>
          </a>
        </A>
      </Link>
    </Logo>
  </Route>
</withRouter(Logo)>
`;

exports[`Icons should render correctly 1`] = `<Icon />`;

exports[`Icons should render correctly 2`] = `
<withRouter(Logo)
  className="textClassName"
  to="/"
>
  <Route>
    <Logo
      className="textClassName"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={Object {}}
      match={Object {}}
      to="/"
    >
      <Link
        onClick={[Function]}
      >
        <A
          className="link"
          onClick={[Function]}
        >
          <a
            className="link"
            onClick={[Function]}
          >
            <Imported
              className="logo textClassName"
              title="Astronomer"
            >
              <ReactImportedComponent
                className="logo textClassName"
                loadable={
                  Object {
                    "done": true,
                    "importFunction": [Function],
                    "load": [Function],
                    "mark": Array [],
                    "ok": true,
                    "payload": Object {
                      "default": Object {
                        "process": [Function],
                      },
                      "process": [Function],
                    },
                    "promise": Promise {},
                    "reset": [Function],
                  }
                }
                render={[Function]}
                title="Astronomer"
              >
                <UnconnectedReactImportedComponent
                  async={false}
                  className="logo textClassName"
                  exportPicker={[Function]}
                  loadable={
                    Object {
                      "done": true,
                      "importFunction": [Function],
                      "load": [Function],
                      "mark": Array [],
                      "ok": true,
                      "payload": Object {
                        "default": Object {
                          "process": [Function],
                        },
                        "process": [Function],
                      },
                      "promise": Promise {},
                      "reset": [Function],
                    }
                  }
                  render={[Function]}
                  streamId={0}
                  title="Astronomer"
                >
                  <img
                    className="logo textClassName"
                    src={
                      Object {
                        "process": [Function],
                      }
                    }
                    title="Astronomer"
                  />
                </UnconnectedReactImportedComponent>
              </ReactImportedComponent>
            </Imported>
          </a>
        </A>
      </Link>
    </Logo>
  </Route>
</withRouter(Logo)>
`;

exports[`Icons should render correctly 3`] = `
<Avatar
  className="testClassName"
  title="Test"
  url="/"
>
  <Box
    className="avatar pic testClassName"
  >
    <Flex
      className="avatar pic testClassName"
      flow="box"
    >
      <div
        className="flex box undefined avatar pic testClassName"
      >
        <img
          src="/"
          title="Test"
        />
      </div>
    </Flex>
  </Box>
</Avatar>
`;

exports[`Icons should render correctly 4`] = `
<Airflow
  dagSize="10"
>
  <Box
    className="airflow"
  >
    <Flex
      className="airflow"
      flow="box"
    >
      <div
        className="flex box undefined airflow"
      >
        <Icon
          className="border ring"
          icon="airflow_ring"
        >
          <Imported
            className="border ring"
          >
            <ReactImportedComponent
              className="border ring"
              loadable={
                Object {
                  "done": true,
                  "importFunction": [Function],
                  "load": [Function],
                  "mark": Array [],
                  "ok": true,
                  "payload": Object {
                    "default": Object {
                      "process": [Function],
                    },
                    "process": [Function],
                  },
                  "promise": Promise {},
                  "reset": [Function],
                }
              }
              render={[Function]}
            >
              <UnconnectedReactImportedComponent
                async={false}
                className="border ring"
                exportPicker={[Function]}
                loadable={
                  Object {
                    "done": true,
                    "importFunction": [Function],
                    "load": [Function],
                    "mark": Array [],
                    "ok": true,
                    "payload": Object {
                      "default": Object {
                        "process": [Function],
                      },
                      "process": [Function],
                    },
                    "promise": Promise {},
                    "reset": [Function],
                  }
                }
                render={[Function]}
                streamId={0}
              >
                <img
                  className="border ring"
                  src={
                    Object {
                      "process": [Function],
                    }
                  }
                />
              </UnconnectedReactImportedComponent>
            </ReactImportedComponent>
          </Imported>
        </Icon>
        <Icon
          className="dag 10"
          icon="dag"
        >
          <Imported
            className="dag 10"
          >
            <ReactImportedComponent
              className="dag 10"
              loadable={
                Object {
                  "done": true,
                  "importFunction": [Function],
                  "load": [Function],
                  "mark": Array [],
                  "ok": true,
                  "payload": Object {
                    "default": Object {
                      "process": [Function],
                    },
                    "process": [Function],
                  },
                  "promise": Promise {},
                  "reset": [Function],
                }
              }
              render={[Function]}
            >
              <UnconnectedReactImportedComponent
                async={false}
                className="dag 10"
                exportPicker={[Function]}
                loadable={
                  Object {
                    "done": true,
                    "importFunction": [Function],
                    "load": [Function],
                    "mark": Array [],
                    "ok": true,
                    "payload": Object {
                      "default": Object {
                        "process": [Function],
                      },
                      "process": [Function],
                    },
                    "promise": Promise {},
                    "reset": [Function],
                  }
                }
                render={[Function]}
                streamId={0}
              >
                <img
                  className="dag 10"
                  src={
                    Object {
                      "process": [Function],
                    }
                  }
                />
              </UnconnectedReactImportedComponent>
            </ReactImportedComponent>
          </Imported>
        </Icon>
      </div>
    </Flex>
  </Box>
</Airflow>
`;

exports[`Icons should render correctly 5`] = `
<Triangle>
  <span
    className="triangle"
  />
</Triangle>
`;
